--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,4 @@
 [server]
 headless = true
-port = 8501
+port = $PORT
 enableCORS = false
-
-[theme]
-base="dark"
-primaryColor="#80dfff"
-backgroundColor="#0d0d0d"
-secondaryBackgroundColor="#1a1a1a"
-textColor="#ffffff"
